[package]
name = "adocnote"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "adocnote"
path = "src/main.rs"

[lib]
name = "adocnote"
path = "src/lib.rs"

[dependencies]
log = "0.4.17"
simplelog = "0.12.0"
anyhow = "1.0.55"
async-std = { version = "1.10.0", features = ["attributes"] }
once_cell = "1.13.1"
regex = "1.6.0"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
chrono = { version = "0.4.22", features = ["serde"] }
#js-sandbox = "0.1.6"
#deno_core = "0.148.0"
toml = "0.5.9"
notify = "5.0.0"
tl = "0.7.7"
tera = "1.17.0"

[dev-dependencies]
futures-await-test = "0.3.0"
