[workspace]
members = ["data", "archive"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["nobug"]

[workspace.dependencies]
log = "0.4.17"
simplelog = "0.12.0"
anyhow = "1.0.66"
async-std = { version = "1.12.0", features = ["attributes"] }
once_cell = "1.16.0"
regex = "1.6.0"
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
chrono = { version = "0.4.22", features = ["serde"] }
#js-sandbox = "0.1.6"
#deno_core = "0.148.0"
toml = "0.5.9"
notify = "5.0.0"
tide = "0.16.0"
tl = "0.7.7"
tera = "1.17.1"
bimap = "0.6.2"
minify-html-onepass = "0.10.3"

futures-await-test = "0.3.0"
