[workspace]
members = ["config", "asciidoc", "data", "render", "app"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["nobug"]

[workspace.dependencies]
log = "0.4.17"
simplelog = "0.12.0"
anyhow = "1.0.66"
async-trait = "0.1.58"
async-std = { version = "1.12.0", features = ["attributes"] }
once_cell = "1.16.0"
regex = "1.6.0"
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
serde_yaml = "0.9.14"
chrono = { version = "0.4.22", features = ["serde"] }
deno_core = "0.158.0"
toml = "0.5.9"
notify = "5.0.0"
tide = "0.16.0"
tide-websockets = "0.4.0"
tl = "0.7.7"
nipper = "0.1.9"
tendril = "0.4.3"
tera = "1.17.1"
bimap = "0.6.2"
minify-html-onepass = "0.10.3"
fs_extra = "1.2.0"
percent-encoding = "2.2.0"

futures-await-test = "0.3.0"

config = { package = "config", path = "config" }
asciidoc = { package = "asciidoc", path = "asciidoc" }
render = { package = "render", path = "render" }
data = { package = "data", path = "data" }
