[package]
name = "app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/main.rs"

[lib]
name = "app"
path = "src/lib.rs"

[dependencies]
log.workspace = true
simplelog.workspace = true
async-std.workspace = true
async-trait.workspace = true
anyhow.workspace = true
once_cell.workspace = true
tide.workspace = true
tide-websockets.workspace = true
notify.workspace = true

config.workspace = true
data.workspace = true
