[package]
name = "asciidoc"
version = "0.1.0"
edition = "2021"

[dependencies]
log.workspace = true
anyhow.workspace = true
async-std.workspace = true
serde.workspace = true
serde_json.workspace = true
#deno_core.workspace = true
once_cell.workspace = true
regex.workspace = true
#nipper.workspace = true
tl.workspace = true
#tendril.workspace = true
chrono.workspace = true
config.workspace = true

[dev-dependencies]
futures-await-test.workspace = true