[package]
name = "asciidoctor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-std.workspace = true
serde.workspace = true
serde_json.workspace = true
deno_core.workspace = true
once_cell.workspace = true
regex.workspace = true
#html5ever.workspace = true
#scraper.workspace = true
#tl.workspace = true
#lol_html.workspace = true
nipper.workspace = true
#kuchiki.workspace = true
[dev-dependencies]
futures-await-test.workspace = true
asciidoc.workspace = true