[package]
name = "data"
version = "0.1.0"
edition = "2021"

[dependencies]
log.workspace = true
anyhow.workspace = true
once_cell.workspace = true
tl.workspace = true
chrono.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true
serde_yaml.workspace = true
notify.workspace = true
toml.workspace = true
fs_extra.workspace = true

config.workspace = true
asciidoc.workspace = true
render.workspace = true