[package]
name = "render"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
notify.workspace = true
tera.workspace = true
bimap.workspace = true
once_cell.workspace = true
config.workspace = true